    <param name="return_all_objects" value="0">
    <param name="language" value="fr">
    <param name="xrange" value="-11,11">
    <param name="yrange" value="-11,11">    
    <param name="background_color" value="black">
    <param name="square1" value="4:1,4:2,4:3,4:4,5:4,6:4,8:4,8:3,8:2,8:1,5:1,6:1,7:1">
    <param name="square1_color" value="blue">
    <param name="square2" value="-4:1,-4:2,-4:3,-4:4,-5:4,-6:4,-8:4,-8:3,-8:2,-8:1,-5:1,-6:1,-7:1">
    <param name="square2_color" value="yellow">
</applet>

Now :
multiple point(s) may be defined
multiple poly(s) may be defined
multiple segment(s) may be defined
multiple line(s) may be defined

However: only 1 type at a time !! 
Leave other params empty.
The next config will show the "poly":
<param name="point" value="">
<param name="segment" value="">
<param name="poly" value="-10:-10,5:5,10:-10">
<param name="line" value="">

Segment and line are the same ... for now.

Added more defaults to avoid problems with params.
Added some more error checking
While testing: Open Your Java Console !!

Increased amount or elementary rectangles per single "square_n" object to (width x height)

18/2/2008

Changed param syntax: square_color1 --> square1_color
added:
<param name="status" value="waiting"> used for interactive exercise
<param name="status" value="done"> used for showing correct drawing

Color cycling now limited to used colors in the defined "square1...square_n"
IMPORTANT: right mouse click changes color
IMPORTANT: left mouse click is used to make drawing

19/2/2008 (BPR)
New param to add some colors (eventually other than the one used for square)
<param name="color" value="purple,cyan">

Left mouse click can be used also to change color (hope it will be OK ! for computer with no right mouse)

22/2/2008 (BPR)
Left mouse click is not the background color at the beginning
change poly to polygon
fix (?) bug : Ry*Ry-> MAX

28/2/2008 (BPR)
Change the name : it is now Clicktile !










 