@@ -15,6 +15,9 @@
 		    <!-- choose from the 13 colors -->
 		    <param name="point_color" value="red">
 		    <param name="colors" value="green,black">
+		   <!--  <param name="image" value="http://...">
+		         <param name="copy" value="100,100">
+		    -->
 		    <!-- status = done : display non-clickable image -->
 		    <param name="status" value="waiting">
 
@@ -32,8 +35,8 @@
 
 		    <!-- en ,de , fr ,nl  default en -->
 		    <param name="language" value="en">
-	    	    <param name="xrange" value="-6,6">
-	    	    <param name="yrange" value="-6,6">	    
+	    	    <param name="xrange" value="-10,10">
+	    	    <param name="yrange" value="-10,10">	    
 	    	    <param name="background_color" value="grey">
 		  <param name="square1" value="-1:5,0:5">
 	    	    <param name="square1_color" value="red">
