@@ -121,13 +121,18 @@ Left mouse click can be used also to change color (hope it will be OK ! for comp
 22/2/2008 (BPR)
 Left mouse click is not the background color at the beginning
 change poly to polygon
-fix (?) bug : Ry*Ry-> MAX
+fix bug (?): Ry*Ry-> MAX
 
 28/2/2008 (BPR)
 Change the name : it is now Clicktile !
 
+28/2/2008 (BPR)
+add param for image in background
+<param name="image" value="http://..."><param name="copy" value="a,b">
+(a and b are the coordinates in pixels of the left top corner of the image). 
 
-
+To fix: if the coordinates of a square are not inside the range, the applet 
+is opened, but the squares in this color can be changed (it should not)
 
 
 
